--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -393,6 +393,11 @@ Diese Spalte ist eine Standardspalte.
 |Der Umsatzsteuersatz der Auftragsposition wird angezeigt. +
 Diese Spalte ist eine Standardspalte.
 
+// TODO: Sprint 6 Gewinnspanne
+| *Gewinnspanne*
+|Die Gewinnspanne des Auftrags wird angezeigt. +
+Diese Spalte ist eine
+
 | *Externe Artikel-ID*
 |Die externe Artikel-ID wird angezeigt. +
 Dies ist eine optionale Spalte.
@@ -961,6 +966,14 @@ Du kannst folgende Auftragstypen anlegen:
 | icon:warehouse[set=material]
 | Klicke auf icon:warehouse[set=material], um *Lagerorte zuweisen* oder *Lagerorte lösen* zu wählen.
 icon:warehouse[set=material] ist nur zu sehen, wenn dies möglich ist.
+////
+sprint 6 (Dorin):
+zuweisen/lösen
+create a context menu in the edit view with unassign/assign + edit properties + trash bin
+on show unassign if the item is already saved
+create a modal to show the search when you try to assign a an item and add a filter in the search
+for the search analysis (reusable filter? create a new one?)
+////
 
 | *Sperren*
 | icon:lock[set=material]
@@ -970,25 +983,25 @@ icon:warehouse[set=material] ist nur zu sehen, wenn dies möglich ist.
 | *Löschen*
 | icon:delete[set=material]
 | Klicke auf icon:delete[set=material], um einen Eintrag zu löschen. + 
-Löschen ist nur dann möglich, wenn wirklich etwas gelöscht werden kann. Klick darauf und der linke Eintrag ist nicht mehr zu sehen und du bist zurück in der Suche.
-// TODO: Satz
+Hinweis: Löschen ist nur dann möglich, wenn etwas gelöscht werden kann. Klicke darauf und du kommst zurück in die Suche.
 
 | *Kopieren*
 | icon:content_copy[set=material]
 | Klicke auf icon:content_copy[set=material], um einen Auftrag zu kopieren.
 Du kannst einen Auftrag vollständig kopieren, z.B. wenn der Kunde die gleiche Bestellung noch einmal tätigt oder mehrere Personen die gleiche Bestellung tätigen. Durch das Kopieren sparst du dir, alle Daten erneut einzugeben.
-Die Option *Kopieren* gibt es für folgende Auftragstypen: 
+Die Option icon:content_copy[set=material] *Kopieren* gibt es für folgende Auftragstypen: 
 * *Auftrag* (sales order im System)
 * *Angebot*
 * *Vorbestellung*
 // TODO: alte UI bei Waren - Bestellung - “Nachbestellung kopieren” - Frage “Möchtest du kopieren…”
 Dokumente - kopieren - wird in die Zwischenablage gelegt
-per Drag&Drop die Anordnung der Datenfelder ändern.
+Die Anordnung der Datenfelder kansst du per Drag&Drop ändern.
 
 | *Kaufabwicklung Weiterleitung*
 | icon:visibility[set=material]
 | Klicke auf icon:visibility[set=material], um auf einen Webshop weitergeleitet zu werden.
 // TODO: alte UI: Übersicht - Kaufabwickung
+
 
 ////
 nicht alle Bereiche werden initial mit Daten geladen (Datenlast reduzieren) - nachfragen was das bedeutet. Welche Bereiche nicht?
@@ -1127,6 +1140,11 @@ Die Standardeinstellung für Zahlungsart ist Vorkasse ??.
 | *Auftragstyp*
 |Der Auftragstyp wird angezeigt. Über die Dropdown-Liste ist der Auftragstyp manuell anpassbar. +
 Die Standardeinstellung für Auftragstyp ist Auftrag.
+// TODO: Sprint 6
+NEU: Für die Auftragstypen *Auftrag* und *Vorbestellung* gibt es einen neuen Button icon:change_circle[set=material] rechts, um innerhalb der beiden Auftragstypen zu tauschen. Das heißt wenn du in einem *Auftrag* bist, kannst du über icon:change_circle[set=material] in den Auftragstyp *Vorbestellung* wechseln und andersherum.
+////
+Make the field read only and create a button at the end of the field to swap the order type between advanced order and sales order. Only possible for Sales order / advanced order.
+////
 
 | *Sprache*
 |Die Sprache des Auftrags wird angezeigt. +
@@ -1175,6 +1193,7 @@ Die Standardeinstellung für für Herkunft ist Manuelle Eingabe [0].
 | *Lager*
 |Lager der Auftragsartikel bzw. das Hauptlager wird angezeigt. Klicke bei Bedarf auf Lagerkorrektur, um das Lager zu ändern.
 
+// TODO: formatieren
 Wichtig: Die Option *Lagerkorrektur* gleicht die Anzeige in den Einstellungen des Auftrags mit dem Lager ab, das an den enthaltenen Auftragspositionen hinterlegt ist. Die Option wird nur angezeigt, wenn du in den Grundeinstellungen im Menü Einrichtung » Aufträge » Einstellungen die Option *b) pro Artikelposition kann ein Lager zugeordnet* werden gewählt hast. Änderst du an einer Auftragsposition manuell das Lager und wird das neue Lager nicht automatisch in Einstellungen des Auftrags übernommen, klicke auf *Lagerkorrektur*, um die Anzeige des Lagers zu aktualisieren.
 
 // TODO: besser formulieren
@@ -1193,10 +1212,17 @@ Wählst du *a) pro Auftrag kann ein Lager zugeordnet werden*, dann kann das Lage
 [#area-order-positions]
 === Bereich: Auftragspositionen
 Im Bereich *Auftragspositionen* siehst du alle für den Auftrag relevante Informationen von Menge bis Preise. +
+Über icon:edit[set=material] links kannst du die Artikelpositionen bearbeiten. Dies wird dir in der Seitennavigation eingerückt in blauer Schrift angezeigt. 
+// TODO: Tooltip für Stift fehlt
+Über Icon Kreis Pfeil kannst du *Daten aktualisieren*.
 Über icon:settings[set=material] kannst du die *Spalten konfigurieren*.
-Über icon:edit[set=material] kannst du in Artikel bearbeiten. Dies wird dir in der Seitennavigation links eingerückt in blauer Schrift angezeigt.
 
 *_Hinweis_*: Du kannst Auftragspositionen nur dann bearbeiten, wenn noch kein Warenausgang gebucht ist. Wenn Waren verschickt wurden, kannst du die Positionen nicht mehr bearbeiten.
+////
+siehe dazu daten: auftraege.adoc - anpassen wo nötig
+Datenfelder Auftragspositionen
+Die Tabs aus der alten UI sind nun in den Bereichen untergebracht -> Text anpassen
+////
 
 [[table-order-positions]]
 .Bereich: Auftragspositionen
@@ -1206,18 +1232,16 @@ Im Bereich *Auftragspositionen* siehst du alle für den Auftrag relevante Inform
 
 2+^| *Auftragspositionen*
 
-Über icon:edit[set=material] bearbeiten.
-
 | *Menge*
 |Die bestellte Menge der Auftragsposition wird angezeigt. +
 Diese Spalte ist eine Standardspalte.
 
 | *Artikel-ID*
-|Die Artikel-ID der Auftragsposition wird angezeigt. Durch Klicken auf die ID wird der Artikel geöffnet. +
+|Die Artikel-ID der Auftragsposition wird angezeigt. Durch Klick auf die ID wird der Artikel geöffnet. +
 Dies ist eine optionale Spalte.
 
 | *Varianten-ID*
-|Die Varianten-ID der Auftragsposition wird angezeigt.  Durch Klicken auf die ID wird die Variation geöffnet. +
+|Die Varianten-ID der Auftragsposition wird angezeigt.  Durch Klick auf die ID wird die Variation geöffnet. +
 Diese Spalte ist eine Standardspalte.
 
 | *Variantennummer.*
@@ -1744,6 +1768,7 @@ Im Bereich *Historie* siehst du eine Übersicht der getätigten Aktionen mit Sta
 Der Bereich *Waren zurückbuchen* lässt sich öffnen, wenn du in einer *Retoure* auf *Waren zurückbuchen* gehst. Über icon:input[set=material] kannst du den Bereich öffnen. Der Titel erscheint nach dem Anlegen auch links in der Seitennavigation. In einer Retoure ist icon:input[set=material] immer zu sehen. In einem (Haupt-)Auftrag oder einer Garantie siehst du das Icon nur dann, wenn ein versandter Artikel hinterlegt ist.
 Über icon:settings[set=material] kannst du auch in diesem Bereich die Spalten konfigurieren.
 
+
 [.instruction]
 Gehe folgendermaßen vor, um Waren zurückzubuchen:
 
@@ -1751,6 +1776,23 @@ Gehe folgendermaßen vor, um Waren zurückzubuchen:
 . Wähle im Bereich *Allgemein* das Datum für die Rückbuchung (Rückgabedatum). 
 . Klicke auf icon:save[set=material]. +
 -> das Bearbeitungsfenster für *Waren zurückbuchen* öffnet sich und neben dem Warenkorb wird icon:input[set=material] sichtbar. 
+// TODO: besser formulieren
+. Klicke auf icon:output[set=material] *Warenausgang buchen*, um das Warenausgangsdatum zu wählen.
+. Bestätige durch Ausführen.
+
+Über icon:input[set=material] kannst du Waren zurückbuchen. Wähle, ob du alle Artikel oder nur ausgewählte Artikel zurückbuchen möchtest.
+* *Alle Waren zurückbuchen* bucht alle Artikel zurück
+* *Ausgewählte Waren zurückbuchen* leitet auf die neue UI weiter, wo du Artikel auswählen kannst.
+
+////
+sprint 6:
+Button *Book outgoing items* in toolbar (click to set a date)
+Remove button from datepicker in general widget ???
+
+As soon as Button for outgoing item is used the button changes to "Book Back items" with a sub menu where you can choose if you want to book back all item or partly.
+Book back all items will directly book back all items
+Book back partly will go to the new UI where the customer can select the items.
+////
 
 // TODO: Die Standard-Reihenfolge ändert sich evtl. noch
 [[table-book-back-item]]
@@ -2246,10 +2288,11 @@ Angezeigte Filter wählen:
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
-
-// TODO: wie kann man die Filter am besten darstellen? Jetzt: Übergeordnet Gruppe, dann jew. Filter, dann Operatoren dazu; geplant: für Ausgewählte Filter soll es in der Ansicht noch 3 Spalten geben statt 2. Wie beschreiben dass leer = Alle in der alten UI
-// TODO: xrefs an entsprechende Stelle
-
+//// 
+TODO: wie kann man Filter und Operatoren am besten darstellen? Jetzt: Übergeordnet Gruppe, dann jew. Filter, dann Operatoren dazu; geplant: für Ausgewählte Filter soll es in der Ansicht noch 3 Spalten geben statt 2. Wie beschreiben dass leer = Alle in der alten UI. 
+Vergleiche hierzu daten/auftraege.adoc: operatoren - collapse box.
+TODO: xrefs an entsprechende Stelle
+////
 2+^| *Grundlegende*
 
 | *Auftrags-ID*
@@ -2826,5 +2869,53 @@ Einrichtung - Einstellungen - Aufträge - Auftragstypen - Auftrag [Beta]
 Aufträge verwalten (alte UI)
 // TODO: verweisen, aber Doppelungen vermeiden
 
+
+// TODO: wo am besten?
+[#250]
+== Eigenschaftskopie
+ 
+Du kannst festlegen, welche Auftragsinformationen (Eigenschaften eines Auftrags) in einen anderen Auftrag übernommen werden sollen. Zum Beispiel werden Eigenschaften beim Erstellen von Lieferaufträgen oder Retouren vom Hauptauftrag kopiert. Es sind Informationen, die an einem Auftrag hängen, z.B. das Versandprofil, der Zahlungsstatus oder die Dokumentensprache. Eigenschaften können am Auftrag oder an einer Auftragsposition hängen. +
+*_Beachte_*: Gemeint sind hier nicht selbst erstellte xref:artikel:eigenschaften.adoc#500[Eigenschaften], wie z.B. Bestellmerkmale.
+ 
+[IMPORTANT]
+.Standard für kopierte Eigenschaften
+====
+Standardmäßig werden alle benötigten Eigenschaften vom einen in den jeweils anderen Auftragstyp übernommen. Du musst in diesem Menü nichts dafür einstellen. Ändere daher nur nach sorgfältiger Überlegung etwas an den kopierten Eigenschaften.
+====
+ 
+Bestimme im Menü *Einrichtung » Aufträge » Eigenschaftskopie*, welche Eigenschaften kopiert werden sollen. Du kannst dies individuell für verschiedene Kombinationen, z.B. von Auftrag (Quelle) zu Lieferauftrag (Ziel), festlegen. Beachte, dass nicht alle Eigenschaften zum Kopieren freigeschaltet sind. 
+
+Die Tabellenspalte *Quelle* zeigt an, woher die Eigenschaft kommt. *Intern* bedeutet, die Eigenschaft kommt vom System. *Interface* bedeutet, die Eigenschaft wurde über eine Schnittstelle wie ein Plugin oder per REST erstellt. +
+Beim Öffnen des Menüs sind bereits einige Filter vorausgewählt. Passe diese an, falls die Einstellungen nicht deinen Wünschen entsprechen.
+ 
+[.instruction]
+Eigenschaften fürs Kopieren aktivieren:
+ 
+. Öffne das Menü *Einrichtung » Aufträge » Eigenschaftskopie*.
+. Öffne die Suchfilter (icon:filter_alt[set=material]).
+. Wähle für den Filter *Auftragstyp Quelle* den Auftragstyp aus, von dem die Eigenschaften kopiert werden sollen.
+. Wähle für den Filter *Auftragstyp Ziel* den Auftragstyp, in den die Eigenschaften hinein kopiert werden sollen.
+. Führe die Suche aus. +
+→ Die Eigenschaften werden in der Tabelle angezeigt.
+. Aktiviere oder deaktiviere in der Tabellenspalte *Auftragseigenschaft kopieren* die Eigenschaften, die kopiert werden sollen.
+. Aktiviere oder deaktiviere in der Tabellenspalte *Auftragspositionseigenschaft kopieren* die Eigenschaften, die kopiert werden sollen. +
+→ Die aktivierten Eigenschaften werden fortan kopiert.
+ 
+Darüber hinaus stehen dir in der Suche (icon:filter_alt[set=material]) noch folgende Filter zur Verfügung:
+ 
+* *Nur kopierbare Eigenschaften anzeigen* +
+Wähle *Ja*, wenn dir in der Tabelle nur die Eigenschaften angezeigt werden sollen, die von einem Auftragstyp zum anderen übertragen werden können. +
+Wähle *Nein*, wenn dir in der Tabelle alle Eigenschaften, auch die nicht kopierbaren, angezeigt werden sollen.
+* *Eigenschafts-ID* = Gib eine konkrete Eigenschafts-ID ein, nach der du suchen möchtest. Es kann nur eine ID eingegeben werden.
+* *Quelle* = Wählst du nichts aus, werden die Eigenschaften aller Quellen angezeigt. Wählst du *Intern* oder *Interface* aus, werden dir jeweils nur die Eigenschaften dieser Quellen angezeigt.
+
+// TODO: Slider
+| *Auftragseigenschaft kopieren*
+Über Slider grau = deaktiviert, nach rechts schieben (blau) aktivieren.
+
+| *Auftragspositioneigenschaft kopieren*
+Über Slider grau = deaktiviert, nach rechts schieben (blau) aktivieren.
+
+// TODO: Eigenschafts-IDs - wo werden die beschrieben?
 
 
