--- a/docs/de-de/modules/auftraege/pages/auftragstypen-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragstypen-testphase.adoc
@@ -3,12 +3,28 @@
 :description: Erfahre, wie du mit Auftragstypen in der Aufträge-UI [Testphase] in plentymarkets arbeitest.
 :author: team-order-core
 
+//// 
+// TODO: xref anpassen
+Folgende Auftragstypen gibt es in plentymarkets:
+ * xref:auftraege:auftraege-verwalten.adoc#[Auftrag]
+ * xref:auftraege:auftraege-verwalten.adoc#240[Angebot]
+ * xref:auftraege:auftraege-verwalten.adoc#1100[Vorbestellung]
+ * xref:auftraege:auftraege-verwalten.adoc#600[Gewährleistung]
+ * xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift]
+ * <</auftraege/auftraege-verwalten#300, Lieferauftrag>>
+ * xref:auftraege:auftraege-verwalten.adoc#700[Reparatur]
+ * xref:auftraege:auftraege-verwalten.adoc#400[Retoure]
+ * xref:auftraege:auftraege-verwalten.adoc#800[Sammelauftrag]
+ * xref:auftraege:auftraege-verwalten.adoc#850[Sammelgutschrift]
+
+ siehe: auftraege-testphase.adoc
+Auftragsdokumente: team-docs-automation
+////
 
 == Auftrag [Beta]
 Unter: Einrichtung - Aufträge - Auftragstypen - Auftrag [Beta]
 
-siehe auch auftraege-testphase.adoc
-Auftragsdokumente durch team-docs-automation
+
 
 == Lieferauftrag
 
