fix warnings - EN

--- a/docs/de-de/modules/maerkte/partials/properties-creation-table.adoc
+++ b/docs/de-de/modules/maerkte/partials/properties-creation-table.adoc
@@ -1,4 +1,4 @@
-[#table-{market}-{property}]
+[[table-{market}-{property}]]
 .Eigenschaft {property}
 [cols="1,2a"]
 |===
@@ -30,10 +30,3 @@ endif::[]
 :property-area!:
 :property-type!:
 :property-name!:
-
-////
-:property:
-:property-area:
-:property-type:
-:property-name:
-////
