--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -131,6 +131,13 @@ In this step, you select one or multiple tags that should be assigned to the mes
 
 In the last section, select the subscribers who should be informed in case of new messages. Either select individual users from the drop-down list or select roles in order that all users that are assigned to this role will subscribe for new messages in this inbox.
 
+[#test-mode-inactive]
+==== Setting test mode to inactive
+
+To be able to send messages with the messenger, you need to set the test mode in the *Setup » Client » [Select client] » Email » Login details* to *inactive*.
+
+Setting the test mode to *inactive* can be done in this step. To do so, select (icon:check_box[set=material, role=skyBlue]) the option *Activate live mode*.
+
 [#create-message]
 == Creating a message
 
