Add outbound order documents step to assistant

--- a/docs/en-gb/modules/fulfilment/partials/ebay-fulfillment-by-orange-connex.adoc
+++ b/docs/en-gb/modules/fulfilment/partials/ebay-fulfillment-by-orange-connex.adoc
@@ -212,6 +212,11 @@ Create an order status for the following two occasions:
 * Send outbound order
 * Send request to cancel outbound
 
+[#outbound-order-documents]
+=== Outbound order documents
+
+In this step, you can select which documents you want to send with the outbound order. By default, none of the documents will be sent. Activate (icon:toggle_on[set=material, role=skyBlue]) the buttons for the delivery note, return slip or return label if you want that these documents are sent with the outbound order.
+
 [#order-status-order-change-ebay-fulfillment-orange-connex]
 === Statuses: Order changes by eBay Fulfillment by Orange Connex
 
