update rights and add box for default template in emailbuilder

--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -31,7 +31,7 @@ You can find the following improvements in the new Messenger that haven’t been
 * Sending emails to your customers
 * Using the group function in the Messenger
 * Possibility to subscribe for conversations and receive notifications regarding new messages within this conversation
-  Display in the back end when other system users are replying to a message
+* Display in the back end when other system users are replying to a message
 --
 
 [#preparatory-settings]
@@ -47,8 +47,8 @@ If users of the type *Back end* should be able to work with the messenger, a per
 :right-two: pass:quotes[*CRM > Message > Create*]
 :right-three: pass:quotes[*Comments > Show*]
 :right-four: pass:quotes[*Comments > Create*]
-:right-five: pass:quotes[*Setup > Property > Show*]
-:right-six: pass:quotes[*Setup > Property > Create*]
+:right-five: pass:quotes[*Setup > Tag > Show*]
+:right-six: pass:quotes[*Setup > Tag > Create*]
 
 include::_includes:page$rights.adoc[]
 
@@ -123,6 +123,18 @@ The following Messenger-related variables are available in the EmailBuilder:
 * Message preview
 * Message minutes
 * Has billed minutes
+
+[TIP]
+.Use a default template
+====
+In the *CRM » EmailBuilder* menu, you can find the *Messenger* folder that contains a default template for the messenger. You can, of course, adjust this template according to your needs. The template contains the following variables:
+
+* Full name
+* Message content
+* Signature in HTML format
+* Conversation ID
+** The variable *Conversation ID* serves as unique identifier to make sure that the message is always correctly assigned.
+====
 
 [#settings-email-receipt]
 ==== Settings for receiving emails
