ADD english translation of best practice

--- a/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-eigenschaften.adoc
+++ b/docs/de-de/modules/daten/pages/praxisbeispiel-elasticsync-eigenschaften.adoc
@@ -17,8 +17,8 @@ Diese Handbuchseite führt dich Schritt für Schritt durch den Prozess.
 [discrete]
 === Ablauf
 
-* Erstelle die benötigten xref:daten:eigenschaften.adoc#20[Gruppen], xref:daten:eigenschaften.adoc#80[Eigenschaften], und xref:daten:eigenschaften.adoc#140[Auswahlwerte].
-* xref:daten:eigenschaften.adoc#200[Verknüpfe die Eigenschaften] mit den passenden Produkten.
+* Erstelle die benötigten xref:daten:praxisbeispiel-elasticsync-eigenschaften.adoc#20[Gruppen], xref:daten:praxisbeispiel-elasticsync-eigenschaften.adoc#80[Eigenschaften], und xref:daten:praxisbeispiel-elasticsync-eigenschaften.adoc#140[Auswahlwerte].
+* xref:daten:praxisbeispiel-elasticsync-eigenschaften.adoc#200[Verknüpfe die Eigenschaften] mit den passenden Produkten.
 
 Anstatt dies manuell zu tun, wirst du die Daten importieren.
 
