ADD new page to the navigation

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -207,6 +207,7 @@
 **** xref:data:practical-example-elasticsync-postings.adoc[Importing new postings]
 **** xref:data:practical-example-elasticsync-cross-selling-links.adoc[Cross-selling links]
 **** xref:data:practical-example-elasticsync-listing-properties.adoc[Creating eBay properties]
+**** xref:data:practical-example-elasticsync-properties.adoc[Importing properties]
 **** xref:data:practical-example-elasticsync-facets.adoc[Importing new facets]
 **** xref:data:practical-example-elasticsync-parts-compatibility-listing.adoc[Creating parts compatibility listings]
 **** xref:data:practical-example-elasticsync-categories.adoc[Importing new categories]
