add todo / info

--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -1339,6 +1339,27 @@ Globales Zeitintervall des Dashboards ändern:
 Das Element *Globales Zeitintervall* kann pro Dashboard-Ansicht nur ein Mal eingebunden werden. Wir empfehlen dir daher, das Element an einer gut sichtbaren Stelle zu platzieren. In den meisten Fällen bietet sich eine Platzierung oberhalb aller anderen Elemente an.
 ====
 
+[#850]
+=== Globale Filter nutzen
+
+//TODO
+
+////
+Zur Verfügung stehende Filter richten sich danach, was für Kennzahlen auf dem Dashboard vorhanden sind und welche Filter in den Kennzahlkonfigurationen eingestellt wurden. Gibt es auf diesem Dashboard beispielsweise keine Kennzahlkonfiguration, die das Lieferland von Aufträgen auswertet, ist auch kein Filter für das Lieferland wählbar.
+
+Lupe --> refresh, z.B. wenn ein Filter entfernt wird.
+
+1. Pflicht: Element *Globale Filter* auf dem Dashboard platzieren.
+2. Pflicht: In den Einstellungen des Elements anhaken, welche Filter verfügbar sein sollen und welche Kriterien genau. Diese werden dann im Element angezeigt. Operatoren können auch im Element noch verändert werden.
+3. Optional: "Preset"-/Standard-Filter setzen. In den allgemeinen Einstellungen rechts ein Kriterium wählen und speichern. Der so gesetzte Filter wird dann im Globale Filter Element als Chip angezeigt. Der Filter greift immer wenn die Ansicht geöffnet wird. Beispiel: Filter mit Lieferland Deutschland setzen, oder für eine bestimmte Auftragsherkunft. So muss kein zweites Dashboard zum Abbilden solcher Daten gebaut werden. Zum Entfernen in den Allgemeinen Einstellungen auf das X klicken, dann zum Aktualisieren auf die Lupe und dann speichern.
+
+Testplan Globale Filter: https://docs.google.com/spreadsheets/d/1HCGu-rTSuGn6z0c5hNb-J2Eri13D_NhdfxeCRvANpDQ/edit#gid=0
+Anzeigebeispiele: https://docs.google.com/document/d/1AqWETVwg8ggfCQA4uPUBZR3f5aQ1biXif-mo36gxyQU/edit
+
+////
+
+
+
 [#900]
 === Benachrichtigungen anzeigen
 
