--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -56,11 +56,10 @@ Du findest in den folgenden Kapiteln Informationen zu Aufträgen und wie du nach
 plentymarkets verfügt u.a. über eine umfangreiche Schnittstelle zu xref:maerkte:amazon-einrichten.adoc#[Amazon], die nicht nur den automatisierten Abgleich mit dem Seller Central gewährleistet, sondern auch weitere Amazon-Angebote wie xref:maerkte:amazon-fulfillment.adoc#[Fulfillment by Amazon] umfasst.
 
 Dank der vollständigen xref:maerkte:ebay-einrichten.adoc#[eBay-Anbindung] in plentymarkets kannst du u.a. Listings starten und eBay-Shop-Artikel bei eBay einstellen, Verkäufe abrufen, automatisch Bewertungen abgeben und Käufer:innen anmahnen.
-
+// TODO: xref!
 Nach dem Auftragseingang werden alle Aufträge in einem Menü gesammelt und in einem identischen Format angezeigt, damit die xref:auftraege:auftraege-verwalten.adoc#1500[Bearbeitung] leicht erfolgen kann. Jeder Auftrag erhält eine eindeutige *Auftrags-ID*. Weitere Schritte nach dem Auftragseingang, wie die Eingangsbestätigung zur Bestellung, andere E-Mails oder die Generierung von xref:auftraege:auftragsdokumente.adoc#[Auftragsdokumenten], lassen sich automatisieren. Neben dem eigentlichen Auftrag, der im Rahmen einer Bestellung angelegt wird, gibt es in plentymarkets weitere *Auftragstypen*. Die Auftragstypen dienen dazu, verschiedene Geschäftsvorfälle abzubilden.
 
-*_Hinweis:_* Die Suche wird nicht mehr direkt beim Öffnen ausgeführt. Daher musst du auf icon:search[set=material] klicken, um alle Aufträge anzuzeigen. Du kannst die Suchergebnisse durch Filtereinstellungen weiter eingrenzen.
-
+*_Hinweis:_* Die Suche wird nicht mehr direkt beim Öffnen ausgeführt. Daher musst du auf icon:search[set=material] klicken, um alle Aufträge anzuzeigen bzw. in die Auftragsübersicht zu gelangen. Du kannst die Suchergebnisse durch Filtereinstellungen weiter eingrenzen.
  
 Das Menü *Aufträge » Aufträge [Testphase]* ist wie folgt aufgebaut:
  
@@ -70,12 +69,17 @@ image::....png[width=640, height=360]
  
 * *Navigation*: (gelb) In der Navigation links navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Falls du mehrere Aufträge, Auftragstypen oder Varianten gleichzeitig geöffnet hast, werden diese untereinander angezeigt. Klicke auf icon:menu[set=material], um die Navigationsleiste ein- und auszublenden.
 Die neue Seitennavigation wird automatisch angepasst, wenn sich Einträge verschieben, Einträge entfernt oder hinzugefügt werden.
-
+// TODO: xref auf Auftrag anpassen
 * *Toolbar*: Hier kannst du nach Aufträgen xref:crm:kontakt-suchen.adoc#[suchen], die xref:crm:kontakt-suchen.adoc#spalten-konfigurieren[Spalten in der Übersicht konfigurieren], die Ergebnisse pro Seite, die du angezeigt haben möchtest, einstellen und durch die Seiten mit den Kontakten klicken. +
-Wenn du mehrere Aufträge gewählt hast (icon:check_box[set=material, role=skyBlue]), kannst du in diesem Bereich auch die xref:crm:kontakt-bearbeiten.adoc#gruppenfunktion[Gruppenfunktion] nutzen.
+Wenn du mehrere Aufträge gewählt hast (icon:check_box[set=material, role=skyBlue]), kannst du in diesem Bereich auch die xref:....adoc#gruppenfunktion[Gruppenfunktion] nutzen.
 * *Hauptfenster*: Hier wird der aktuell geöffnete Bereich angezeigt.
-** *Übersicht*: Wenn du eine xref:crm:kontakt-suchen.adoc#[Suche ausführst], siehst du die Ergebnisse in einer Übersicht.
-** *Detailansicht*: Wenn du einen Auftrag öffnest, werden die Details im Hauptfenster auf der rechten Seite angezeigt. Die Detailansicht eines Auftrags ist in die folgenden Bereiche unterteilt: +
+** *Übersicht*: Wenn du eine Suche ausführst, siehst du die xref:artikel:suchen.adoc#500[Ergebnisse in einer Übersicht].
+Die Übersicht liefert auf einen Blick viele Informationen zu den gefundenen Aufträgen.
+** *Detailansicht*: Wenn du einen Auftrag öffnest, werden die Details im Hauptfenster auf der rechten Seite angezeigt.
+Was aber, wenn das Hauptfenster leer ist? Oder was, wenn du mit der Anordnung der Auftragsdetails nicht zufrieden bist?
+Du kannst eine xref:artikel:detailansicht.adoc#200[neue Detailansicht erstellen] und sie an deine Bedürfnisse anpassen.
+
+Die Detailansicht eines Auftrags ist in die folgenden Bereiche unterteilt: +
 * Übersicht
 * Status und Tags
 * Adressen
@@ -90,19 +94,6 @@ Wenn du mehrere Aufträge gewählt hast (icon:check_box[set=material, role=skyBl
 * Historie
 
 Die Bereiche werden im weiteren Text erklärt.
-
-
-// TODO: alle xref anpassen
-* *Hauptfenster*:
-Hier wird der aktuell geöffnete Bereich angezeigt.
-** *Übersicht*:
-Wenn du eine Suche ausführst, siehst du die xref:artikel:suchen.adoc#500[Ergebnisse in einer Übersicht].
-Die Übersicht liefert auf einen Blick viele Informationen zu den gefundenen Aufträgen.
-
-** *Detailansicht*:
-Wenn du einen Auftrag öffnest, werden seine Details im Hauptfenster auf der rechten Seite angezeigt.
-Was aber, wenn das Hauptfenster leer ist? Oder was, wenn du mit der Anordnung der Auftragsdetails nicht zufrieden bist?
-Du kannst eine xref:artikel:detailansicht.adoc#200[neue Detailansicht erstellen] und sie an deine Bedürfnisse anpassen.
 
 
 [discrete]
@@ -983,7 +974,7 @@ for the search analysis (reusable filter? create a new one?)
 | *Löschen*
 | icon:delete[set=material]
 | Klicke auf icon:delete[set=material], um einen Eintrag zu löschen. + 
-Hinweis: Löschen ist nur dann möglich, wenn etwas gelöscht werden kann. Klicke darauf und du kommst zurück in die Suche.
+*_Hinweis:_*: Löschen ist nur dann möglich, wenn etwas gelöscht werden kann. Klicke darauf und du kommst zurück in die Suche.
 
 | *Kopieren*
 | icon:content_copy[set=material]
@@ -2020,7 +2011,7 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 - Ist *b) pro Artikelposition kann ein Lager zugeordnet werden* ausgewählt, wird dir *Abhängig vom Warenbestand* angezeigt. In der nächsten Ansicht werden dem Auftrag Artikel hinzugefügt, dort kannst du dann für jede Variation ein Lager aus einer Dropdown-Liste auswählen.
 
 // TODO: Hinweis ausformulieren
-Hinweis: 
+*_Hinweis:_* 
 Lagerwechsel in Artikel bearbeiten
 Du kannst pro Artikelpoition ein Lager zuweisen. Wenn die Position ausgebucht ist, kannst du sie nicht bearbeiten.
 Obere Tabelle bei Lager - Pfeil nach unten - kommt in Tabelle Warenkorb
@@ -2260,7 +2251,7 @@ Im Bearbeitungsmodus unter *Einstellungen » Filter-Einstellungen* werden dir di
 
 |*Verfügbare Filter*
 |In der linken Spalte werden alle verfügbaren Filter angezeigt. +
-Hinweis: Die Filter sind in *Grundlegende*, *Datum*, *Status*, *Artikel*, *Kontakt* und *Marktplatz* gruppiert. Klappe die jeweilige Gruppe auf, um die einzelnen Filter zu sehen und zu wählen.
+*_Hinweis:_* Die Filter sind in *Grundlegende*, *Datum*, *Status*, *Artikel*, *Kontakt* und *Marktplatz* gruppiert. Klappe die jeweilige Gruppe auf, um die einzelnen Filter zu sehen und zu wählen.
 
 |*Angezeigte Filter*
 |In der rechten Spalte werden die ausgewählten Filter angezeigt.
@@ -2455,7 +2446,7 @@ als Platzhalter, Eingabe z.B. Bau* oder *ab*, im Englischen „wildcard characte
 
 * *Ist gleich (=)* heißt: der Wert muss genau gleich sein.
 Beispiel: Suche nach Aufträgen mit der ID 10.
-Hinweis: Du kannst nach mehreren IDs suchen.
+*_Hinweis:_*: Du kannst nach mehreren IDs suchen.
 
 * *Ist kleiner (<)* heißt: der Wert muss kleiner sein.
 Beispiel: Suche nach Aufträgen mit der ID 9 oder kleiner.
@@ -2919,3 +2910,16 @@ Wähle *Nein*, wenn dir in der Tabelle alle Eigenschaften, auch die nicht kopier
 // TODO: Eigenschafts-IDs - wo werden die beschrieben?
 
 
+////
+Erklärung Dorin - Screenshots - unassign statt detach
+Auftrag - rechts Button *Variante zuweisen/lösen* (assign/unassign) in Artikelpositionen
+Wenn eine Variaten zugewiesen ist, wird der Button deaktviert/ist ausgegraut. Wenn nicht, kannst du durch Klick auf den Button eine Variante zuweisen.
+Ein Bearbeitungsfenster öffnet sich *Variante zuweisen*. Darin kannst du mit Filter suchen. z.B. mit *vollständiger Text* nach dem Namen der Auftragsposition oder mit der *Varianten-ID* nach der ID.
+Suchfilter:
+
+Rechts außen ist außerdem der + Button, mit dem du ... hinzufügen kannst.
+
+In der Seitennavigation öffnet sich unter Auftragspositionen *Artikel bearbeiten*. Im 2. level Auftragspositionen gibt es den neuen Button im Kontextmenü. Neben *Daten aktualisieren* (refresh sales prices) kannst du nun Variante hinzufügen oder Variante lösen. 
+Darunter der button *Eigenschaften bearbeiten* (icon:edit[set=material])
+Das Icon 
+////
