replace message with conversation

--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -703,7 +703,7 @@ Within the conversation in the messenger, you can see that it is a PayPal Disput
 [#group-function]
 == Using the group function in the inbox
 
-Once you have selected a message in the overview in the *Inbox* area (icon:check_box[set=material, role=skyBlue]), the different buttons become visible (see <<#image-messenger-group-functions-conversations>>). <<#table-group-functions-messenger>> lists the elements from the group functions as well as their explanations.
+Once you have selected a conversation in the overview in the *Inbox* area (icon:check_box[set=material, role=skyBlue]), the different buttons become visible (see <<#image-messenger-group-functions-conversations>>). <<#table-group-functions-messenger>> lists the elements from the group functions as well as their explanations.
 
 [[image-messenger-group-functions-conversations]]
 .Group function in the inbox
