FIX asciidoc error messages

--- a/docs/de-de/modules/auftraege/pages/abonnement.adoc
+++ b/docs/de-de/modules/auftraege/pages/abonnement.adoc
@@ -210,7 +210,7 @@ Klicke auf icon:caret-down[role="darkGrey"], um zu einer anderen Ansicht zu wech
 Falls nicht gespeicherte Änderungen vorhanden sind, wird eine Sicherheitsabfrage angezeigt.
 |====
 
-[#900]
+[#user-rights]
 ==== Rechtevergabe
 
 Welche Benutzer oder Rollen sollen die Ansicht sehen dürfen?
