--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -226,7 +226,7 @@ In der Übersicht werden geflüsterte Nachrichten in _kursiver Schrift_ dargeste
 *_Wichtig:_* Damit du die Nachricht <<#intable-bill-message, abrechnen>> kannst, musst du mindestens ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellen und dieses Tag der Nachricht zuweisen.
 
 |[#intable-bill-message]*Nachricht abrechnen* (icon:more_vert[set=material, role=darkGrey])
-|Du kannst eine Nachricht immer dann abrechnen, wenn es sich um eine <<#intable-whisper-mode, geflüsterte Nachricht>> handelt. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Nachricht abrechnen* aktivierst (icon:toggle_on[set=material, role=skyBlue]), wird diese Nachricht abgerechnet. Die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* wird geändert in icon:visibility_off[set=material] *ABRECHNEN UND SENDEN*. +
+|Du kannst eine Nachricht immer dann abrechnen, wenn es sich um eine <<#intable-whisper-mode, geflüsterte Nachricht>> handelt. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Nachricht abrechnen* aktivierst (icon:toggle_on[set=material, role=skyBlue]), wird diese Nachricht abgerechnet. Die Schaltfläche icon:forward_to_inbox[set=material, role=skyBlue] *SENDEN* wird geändert in icon:visibility_off[set=material, role=skyBlue] *ABRECHNEN UND SENDEN*. +
 *_Hinweis:_* Du kannst die Schaltfläche *Nachricht abrechnen* nur aktivieren, wenn der <<#intable-whisper-mode, Flüstermodus>> für diese Nachricht aktiviert werden.
 
 |[#intable-timer]*Timer* (icon:more_vert[set=material])
