--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -204,7 +204,7 @@ In the overview, whispered messages are shown in _italics_. +
 *_Important:_* To be able to <<#intable-bill-message, bill>> the message, you have to create at least one tag of the type *Messages (billable)*.
 
 |[#intable-bill-message]*Bill message* (icon:more_vert[set=material, role=darkGrey])
-|You can always bill a message as long as it is a <<#intable-whisper-mode, whispered message>>. Click on icon:more_vert[set=material] first. If you then activate the button *Bill message* (icon:toggle_on[set=material, role=skyBlue]), this message will be billed. The button changes from icon:forward_to_inbox[set=material] *SEND* to icon:visibility_off[set=material] *BILL AND SEND*. +
+|You can always bill a message as long as it is a <<#intable-whisper-mode, whispered message>>. Click on icon:more_vert[set=material] first. If you then activate the button *Bill message* (icon:toggle_on[set=material, role=skyBlue]), this message will be billed. The button changes from icon:forward_to_inbox[set=material, role=skyBlue] *SEND* to icon:visibility_off[set=material, role=skyBlue] *BILL AND SEND*. +
 *_Note:_* You can only activate the button *Bill message* if the <<#intable-whisper-mode, whisper mode>> has been activated for this message.
 
 |[#intable-timer]*Timer* (icon:more_vert[set=material])
