Added chapter about Kaufland catalogue export + recommended mappings

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -401,6 +401,69 @@ Barcode speichern:
 . Gib den Code in das Feld *Code* ein.
 . *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
 
+[#artikelexport]
+== Artikeldaten exportieren
+
+//prüfen, ob beide Exportmöglichkeiten parallel laufen oder ob der alte Export abgestellt wird, sobald es Kataloge gibt
+
+* <<#old-export, _Möglichkeit 1:_ Alter Artikeldatenexport>>
+* <<#catalogue-export, _Möglichkeit 2:_ Katalogexport>>
+
+[#old-export]
+=== _Möglichkeit 1:_ Alter Artikeldatenexport (alte Methode)
+
+In diesem Kapitel wird beschrieben, wie du deine Artikeldaten über den alten Export zu {market} exportierst.
+
+[#catalogue-export]
+=== _Möglichkeit 2:_ Katalogexport (empfohlen)
+
+Mit dem Export über Kataloge machst du deinen Artikelexport zukunftssicher und flexibel. Mit dem Katalogexport werden Artikeldaten über ein Katalog-Format zu Kaufland exportiert. Kataloge erstellst du im Menü *Daten » Kataloge*.
+
+include::partial$catalogue-new-to-text.adoc[]
+
+[#create-catalogue]
+==== Katalog erstellen
+
+Artikeldaten werden über ein Marktplatz-Format zu Kaufland exportiert. Um deine Artikel zu {market} zu exportieren, erstellst du im Menü *Daten » Kataloge* einen Katalog. Verknüpfe dann im Marktplatz-Format die von Kaufland vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. Wenn du den Katalog aktiviert hast, werden die Katalogdaten in regelmäßigen Abständen automatisch zu {market} exportiert.
+
+// Template-Name prüfen
+:catalogue-template-name: Kaufland
+
+include::partial$catalogue-creation.adoc[]
+
+[#data-field-mappings]
+==== Datenfelder im Katalog zuordnen
+
+Nachdem du einen Katalog erstellt hast, ordnest du die Datenfelder des Marktplatzes den in plentymarkets gespeicherten Artikeldaten zu. In diesem Kapitel erfährst du, wie du Datenfelder zuordnest und welche Besonderheiten es bei {market} gibt.
+
+[TIP]
+.Eigenschaften verwenden
+====
+Verwende xref:artikel:eigenschaften.adoc#500[Eigenschaften], um Werte für Marktplatz-Datenfelder zu übergeben, für die es keine Entsprechung in plentymarkets gibt.
+====
+
+include::partial$catalogue-mapping.adoc[]
+
+[#906]
+==== Empfehlungen für Datenfeld-Zuordnungen
+
+include::partial$recommendation-text.adoc[]
+
+//empfohlene Mappings einfügen
+[.collapseBox]
+.Liste mit empfohlenen Datenfeld-Zuordnungen
+--
+include::partial$kaufland-recommended-mappings.adoc[]
+--
+
+[#activate-catalogue]
+==== Katalogexport aktivieren
+
+//Intervall der Datenübertragung prüfen
+:interval:
+
+include::partial$catalogue-activation.adoc[]
+
 [#850]
 == Vorlage für Rechnungen anpassen
 
