--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -275,8 +275,13 @@ Konversation im Messenger suchen:
 |Gib ein Datum ein oder wähle die Datumsangaben aus den Kalendern (icon:today[set=material, role=darkGrey]), um nach Konversationen in einem bestimmten Zeitraum zu suchen.
 
 |[#intable-filter-referrer]*Herkunft*
-|Wähle eine Herkunft, um nach Konversationen mit dieser Herkunft zu suchen. +
-Verfügbare Optionen: *Backend*, *REST*, *Plugin* und *PayPal Plugin* (icon:paypal[role="darkGrey"]).
+a|Wähle eine Herkunft, um nach Konversationen mit dieser Herkunft zu suchen. +
+Mögliche Werte:
+
+* *Backend*
+* *REST*
+* *Plugin*
+* *PayPal Plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-filter-status]*Status*
 |Wähle einen Status, um nach Konversationen mit diesem Status zu suchen. +
@@ -381,8 +386,13 @@ In der Übersicht des Messenger kannst du dir die folgenden Spalten anzeigen las
 |Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material, role=darkGrey] oder icon:arrow_downward[set=material, role=darkGrey], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
 
 |[#intable-overview-referrer]*Herkunft*
-|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
-Mögliche Werte: *Backend*, *REST*, *Plugin*, *PayPal Plugin* (icon:paypal[role="darkGrey"]).
+a|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
+Mögliche Werte:
+
+* *Backend*
+* *REST*
+* *Plugin*
+* *PayPal Plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-overview-relations]*Relationen*
 a|Hier werden die Relationen zur Konversation angezeigt, zum Beispiel:
@@ -826,8 +836,13 @@ Im Ordner *Neue Nachrichten* des Messengers kannst du dir die folgenden Spalten 
 |Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material, role=darkGrey] oder icon:arrow_downward[set=material, role=darkGrey], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
 
 |[#intable-new-messages-referrer]*Herkunft*
-|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
-Mögliche Werte: *Backend*, *REST*, *Plugin*, *PayPal Plugin* (icon:paypal[role="darkGrey"]).
+a|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
+Mögliche Werte:
+
+* *Backend*
+* *REST*
+* *Plugin*
+* *PayPal Plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-new-messages-relations]*Relationen*
 a|Hier werden die Relationen zur Konversation angezeigt, zum Beispiel:
@@ -917,8 +932,13 @@ Im Ordner *Meine Nachrichten* des Messengers kannst du dir die folgenden Spalten
 |Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material, role=darkGrey] oder icon:arrow_downward[set=material, role=darkGrey], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
 
 |[#intable-my-messages-referrer]*Herkunft*
-|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
-Mögliche Werte: *Backend*, *REST*, *Plugin*, *PayPal Plugin* (icon:paypal[role="darkGrey"]).
+a|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
+Mögliche Werte:
+
+* *Backend*
+* *REST*
+* *Plugin*
+* *PayPal Plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-my-messages-relations]*Relationen*
 a|Hier werden die Relationen zur Konversation angezeigt, zum Beispiel:
@@ -1012,8 +1032,13 @@ In Papierkorb des Messengers kannst du dir die folgenden Spalten anzeigen lassen
 |Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material, role=darkGrey] oder icon:arrow_downward[set=material, role=darkGrey], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
 
 |[#intable-trash-referrer]*Herkunft*
-|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
-Mögliche Werte: *Backend*, *REST*, *Plugin*, *PayPal Plugin* (icon:paypal[role="darkGrey"]).
+a|Zeigt mit einem Symbol die Herkunft der Nachricht an. +
+Mögliche Werte:
+
+* *Backend*
+* *REST*
+* *Plugin*
+* *PayPal Plugin* (icon:paypal[role="darkGrey"])
 
 |[#intable-trash-relations]*Relationen*
 a|Hier werden die Relationen zur Konversation angezeigt, zum Beispiel:
