--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -410,12 +410,12 @@ Barcode speichern:
 * <<#catalogue-export, _Möglichkeit 2:_ Katalogexport>>
 
 [#old-export]
-=== _Möglichkeit 1:_ Alter Artikeldatenexport (alte Methode)
+=== _Möglichkeit 1:_ Alter Artikeldatenexport _(alte Methode)_
 
 In diesem Kapitel wird beschrieben, wie du deine Artikeldaten über den alten Export zu {market} exportierst.
 
 [#catalogue-export]
-=== _Möglichkeit 2:_ Katalogexport (empfohlen)
+=== _Möglichkeit 2:_ Katalogexport _(empfohlen)_
 
 Mit dem Export über Kataloge machst du deinen Artikelexport zukunftssicher und flexibel. Mit dem Katalogexport werden Artikeldaten über ein Katalog-Format zu Kaufland exportiert. Kataloge erstellst du im Menü *Daten » Kataloge*.
 
