--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -42,12 +42,12 @@ Setting up the access to Kaufland.de:
 [[kaufland-de-settings]]
 .Settings for the market Kaufland.de
 [cols="1,3a"]
-|====
+|===
 |Setting |Explanation
 
 | *Display name of configuration*
 | Enter a meaningful name for this combination of a client (store)/plentyShop and a Kaufland account. If you do not enter a display name, the name `Default` is saved. +
-*_Tip:_* The display name is only used for the list of configurations. As such, the display name’s purpose is to help you better keep track of the list of configurations in the menu *Setup » Markets » Kaufland.de » Settings » [Open client]*.
+*_Tip:_* The display name is only used for the list of configurations. As such, the display name’s purpose is to help you better keep track of the list of configurations in the *Setup » Markets » Kaufland.de » Settings » [Open client]* menu.
 
 image::markets:kaufland-display-name.png[]
 
@@ -71,10 +71,10 @@ Your previous Kaufland account is listed in the *Setup » Markets » Kaufland.de
 This setting is not relevant for new Kaufland accounts which can be added in the *New account* tab. The setting is therefore *deactivated* by default in a new configuration.
 
 | *Book incoming payment*
-|This setting applies to the order import. Orders are imported either as paid or not paid. Regardless of this setting, items will immediately be cleared for shipping when they have sufficient stock. With the option *open*, you could also set the order to paid when the actual incoming payment from Kaufland.de is received. In this way, Kaufland.de can be tested.
+| This setting applies to the order import. Orders are imported either as paid or not paid. Regardless of this setting, items will immediately be cleared for shipping when they have sufficient stock. With the option *open*, you could also set the order to paid when the actual incoming payment from Kaufland.de is received. In this way, Kaufland.de can be tested.
 
 | *Match shipping service providers*
-|After the shipment has been confirmed, this option allows Kaufland.de to use the package number in order to send the customer an email with the correct tracking link. +
+| After the shipment has been confirmed, this option allows Kaufland.de to use the package number in order to send the customer an email with the correct tracking link. +
 *_Important:_* You have to assign each of your service providers to one of the service providers from the drop-down list.
 
 | *Order status for orders with failed shipping confirmations*
@@ -171,7 +171,7 @@ The plentymarkets availability IDs 1-10 correspond to the item availabilities de
 
 | *Send offer file to Kaufland.de*
 |Send the offer file to Kaufland.de.
-|====
+|===
 
 [#data-exchange]
 === Frequency of data exchange
@@ -181,7 +181,7 @@ After setting up {market} in plentymarkets, the automatic processes described in
 [[data-exchange-market]]
 .Frequency of data exchange
 [cols="1,3a"]
-|====
+|===
 |Data |Interval
 
 | Price synchronisation
@@ -202,7 +202,7 @@ After setting up {market} in plentymarkets, the automatic processes described in
 * transfer of the description text saved in the *Texts* tab
 * transfer of the technical data selected in table 1
 * image export selected in the item's *Images* tab
-|====
+|===
 
 [#225]
 === Deemed Supplier Model
@@ -234,7 +234,7 @@ Link warehouses with the option *Link warehouses* in the menu *Setup » Markets 
 
 :market: Kaufland.de
 :referrer: Kaufland.de
-:referrer-option: pass:quotes[option *Kaufland.de*]
+:referrer-option: pass:quotes[option *Kaufland.de* with ID *170*]
 
 include::partial$activate-referrer.adoc[]
 
@@ -251,7 +251,7 @@ During the order import, Kaufland.de orders are synchronised by the external ord
 ====
 
 [#800]
-=== Permitting payment method in customer classes
+=== Permitting the payment method in a customer class
 
 :market: Kaufland.de
 :payment-method: Kaufland.de Payment (payment via real.de)
@@ -401,6 +401,69 @@ Saving a barcode:
 . Enter the code into the *Code* field.
 . *Save* (icon:save[set=plenty, role="green"]) the settings.
 
+[#item-export]
+== Exporting item data
+
+//check whether both export methods run in parallel or whether the old export will be deactivated once catalogues are available
+
+* <<#old-export, _Alternative 1:_ Old item data export>>
+* <<#catalogue-export, _Alternative 2:_ Catalogue export>>
+
+[#old-export]
+=== _Alternative 1:_ Old item export _(old method)_
+
+This chapter describes how to export your item data to {market} using the old export.
+
+[#catalogue-export]
+=== _Alternative 2:_ Catalogue export _(recommended)_
+
+Catalogue formats provide you with a long-term and flexible way to export your item data. Item data is exported to Kaufland using catalogue formats. Go to *Data » Catalogues* to create catalogues.
+
+include::partial$catalogue-new-to-text.adoc[]
+
+[#create-catalogue]
+==== Creating a catalogue
+
+Item data is exported to Kaufland using a marketplace format. To export your items to {market}, create a catalogue in the *Data » Catalogue* menu. Link the Kaufland data fields with item data saved in plentymarkets in the marketplace format afterwards. After you activate the catalogue, the catalogue data is automatically exported to {market} in regular intervals.
+
+//check template name
+:catalogue-template-name: Kaufland
+
+include::partial$catalogue-creation.adoc[]
+
+[#data-field-mappings]
+==== Mapping data fields in the catalogue
+
+After you have created a catalogue, map the market's data fields to item data saved in plentymarkets. This chapter describes how you map data fields and what particularities apply for item exports to {market}.
+
+[TIP]
+.Using properties
+====
+Use xref:item:managing-items.adoc#500[properties] to export values for marketplace data fields that have no corresponding field in plentymarkets.
+====
+
+include::partial$catalogue-mapping.adoc[]
+
+[#906]
+==== Recommendations for data field mappings
+
+include::partial$recommendation-text.adoc[]
+
+//add recommended mappings
+[.collapseBox]
+.List of recommended data field mappings
+--
+include::partial$kaufland-recommended-mappings.adoc[]
+--
+
+[#activate-catalogue]
+==== Activating the catalogue export
+
+//check data export interval
+:interval:
+
+include::partial$catalogue-activation.adoc[]
+
 [#850]
 == Adjusting invoice template
 
@@ -482,13 +545,13 @@ include::_includes:page$EA.adoc[]
 [[shipping-confirmation-kaufland]]
 .Event procedure to send shipping confirmations to {market}
 [cols="1a,3a,3a"]
-|====
+|===
 |Setting |Option |Selection
 
 | *Event*
 | Select an event, for example:
 
-* *Order change: Status change >* Select a status, for example *[7] Shipped]*
+* *Order change: Status change >* Select a status, for example *[7] Shipped*
 
 _or_
 
@@ -506,10 +569,10 @@ _or_
 | *Procedure*
 | *Plugin*
 | *Send shipping confirmation to Kaufland.de* +
-*_Note:_* If no shipping confirmation could be sent to {market}, the order is moved to the status that you selected for the option *Order status for orders with failed shipping confirmations*. Go to *Setup » Markets » Kaufland.de » Settings* to set this option. +
+*_Note:_* If no shipping confirmation could be sent to {market}, the order is moved to the status that you selected for the option *Order status for orders with failed shipping confirmations*. Go to *Setup » Markets » Kaufland.de » Settings* to set this option.
 
 * <<#no-shipping-confirmation, How to deal with orders in this status>>
-|====
+|===
 
 [#890]
 === Automatically creating invoices
@@ -532,7 +595,7 @@ The status and filters listed in <<#creating-invoices-kaufland>> only serve as a
 [[event-procedure-invoices-kaufland]]
 .Event procedure for automatically creating invoices for Kaufland.de
 [cols="1,3,3"]
-|====
+|===
 |Setting |Option |Selection
 
 | *Event*
@@ -550,7 +613,7 @@ The status and filters listed in <<#creating-invoices-kaufland>> only serve as a
 | *Procedure*
 | *Documents > Generate invoice*
 |
-|====
+|===
 
 [#895]
 === Automatically uploading invoices
@@ -573,7 +636,7 @@ The statuses and filters in <<#event-procedure-invoice-upload-kaufland>> only se
 [[event-procedure-invoice-upload-kaufland]]
 .Event procedure for automatically uploading invoices to Kaufland.de
 [cols="1,3,3"]
-|====
+|===
 |Setting |Option |Selection
 
 | *Event*
@@ -588,7 +651,7 @@ The statuses and filters in <<#event-procedure-invoice-upload-kaufland>> only se
 | *Procedure*
 | *Order > Upload invoice to Kaufland.de*
 |
-|====
+|===
 
 
 [#900]
@@ -616,7 +679,7 @@ include::_includes:page$EA.adoc[]
 [[event-procedure-cancellations-kaufland]]
 .Event procedure for automatically sending cancellations to Kaufland.de
 [cols="1,3,3"]
-|====
+|===
 |Setting |Option |Selection
 
 | *Event*
@@ -635,7 +698,7 @@ include::_includes:page$EA.adoc[]
 | *Order > Send cancellation to Kaufland.de*
 |Select a reason. +
 *_Note:_* You can cancel individual order items for Kaufland.de. However, you cannot adjust the cancellation amount. As such, you can only refund the full sales price of an order item. You cannot grant discounts or reduce the price of cancelled order items.
-|====
+|===
 
 ////
 [#in-fulfillment]
@@ -650,14 +713,14 @@ include::_includes:page$EA.adoc[]
 [[in-fulfillment-kaufland]]
 .Event procedure to send in fulfilment confirmations to {market}
 [cols="1,3a,3a"]
-|====
+|===
 |Setting |Option |Selection
 
 | *Event*
-| Select an event, for example *Order change: Status change*
+| *Order change: Status change*
 | Select a status, for example:
 
-* *[4] In preparation for shipping*
+* *[4] Preparing for shipment*
 
 _or_
 
@@ -675,7 +738,7 @@ _or_
 | *Order*
 | *Send in fulfilment confirmation to Kaufland.de* +
 *_Note:_* If no in fulfilment confirmation could be sent to {market}, the order is moved to the status that you selected for the option *Order status for orders with failed in fulfilment confirmations*. Go to *Setup » Markets » Kaufland.de » Settings* to set this option.
-|====
+|===
 ////
 
 [#returns]
@@ -698,7 +761,7 @@ Use the reference types and reference values listed in <<#table-reference-types>
 [[table-reference-types]]
 .Reference types and reference values for Kaufland.de
 [cols="1,3,3"]
-|====
+|===
 |Reference type |Explanation |Reference value
 
 | *action*
@@ -719,7 +782,7 @@ a| Select a reference type to filter for specific events.
 |Filters by the ID of the Kaufland.de order item.
 |
 
-|====
+|===
 
 
 [#faq]
