--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -63,9 +63,9 @@ include::_includes:page$rechte.adoc[]
 [#tags-messenger]
 === Tags für den Messenger erstellen
 
-Du hast die Möglichkeit, den Nachrichten im Messenger Tags zuzuordnen und nach diesen auch in der Übersicht zu filtern. Tags sind Schlagworte, die dir das Gruppieren von Nachrichten leichter machen.
+Du hast die Möglichkeit, den Nachrichten im Messenger Tags zuzuordnen und nach diesen auch in der Übersicht zu filtern. Tags sind Schlagworte, die dir das Gruppieren von Nachrichten erleichtern.
 
-Welche Benutzer:innenrechte erforderlich sind und wie du Tags erstellst, ist nachfolgend beschrieben.
+Welche Benutzer:innenrechte erforderlich sind und wie du Tags erstellst, ist im Folgenden beschrieben.
 
 [#rechte-tags]
 ==== Rechte für Backend-Benutzer:innen vergeben
