--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -63,9 +63,9 @@ include::_includes:page$rechte.adoc[]
 [#tags-messenger]
 === Tags für den Messenger erstellen
 
-Du hast die Möglichkeit, den Nachrichten im Messenger Tags zuzuordnen und nach diesen auch in der Übersicht zu filtern. Tags sind Schlagworte, die dir das Gruppieren von Nachrichten leichter machen.
+Du hast die Möglichkeit, den Nachrichten im Messenger Tags zuzuordnen und nach diesen auch in der Übersicht zu filtern. Tags sind Schlagworte, die dir das Gruppieren von Nachrichten erleichtern.
 
-Welche Benutzer:innenrechte notwendig sind und wie du Tags erstellst, ist nachfolgend beschrieben.
+Welche Benutzer:innenrechte erforderlich sind und wie du Tags erstellst, ist im Folgenden beschrieben.
 
 [#rechte-tags]
 ==== Rechte für Backend-Benutzer:innen vergeben
@@ -166,7 +166,7 @@ Im letzten Abschnitt wählst du die Abonnent:innen, die bei neuen Nachrichten in
 [#testmodus-inaktiv]
 ==== Testmodus auf inaktiv setzen
 
-Damit du Nachrichten mit dem Messenger versenden kannst, ist es notwendig, dass der Testmodus im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* auf *inaktiv* steht.
+Damit du Nachrichten mit dem Messenger versenden kannst, ist es erforderlich, dass der Testmodus im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Zugangsdaten* auf *inaktiv* steht.
 
 Das Setzen des Testmodus auf *inaktiv* kannst du in diesem Schritt erledigen, ohne den Assistenten verlassen zu müssen. Aktiviere (icon:check_box[set=material, role=skyBlue]) dazu die Einstellung *Live-Modus aktivieren*.
 
