update icons in tags includes

--- a/docs/en-gb/modules/_includes/pages/tags-creation.adoc
+++ b/docs/en-gb/modules/_includes/pages/tags-creation.adoc
@@ -3,7 +3,7 @@ Tags are texts, like keywords or phrases.
 First, create all of the necessary tags.
 
 . Go to *Setup » Settings » Tags*.
-. Click on icon:plus[role="darkGrey"]. +
+. Click on icon:add[set=material, role=darkGrey]. +
 → A pop-up window opens. This window is divided into several steps.
 . Carry out the settings in each step.
 
@@ -34,11 +34,11 @@ Once you’ve created the tag, you can translate the name into other languages.
 | *Tag colour* +
 [red]#(Mandatory field)#
 |What background colour should the tag text have?
-Click on icon:square[set=material, role="darkGrey"] and choose the colour.
+Click on icon:square[set=material] and choose the colour.
 
 *_How do I choose a colour_*?
 
-* Enter the colour values directly. Click on icon:unfold_more[set=material, role="darkGrey"] to toggle between the different options:
+* Enter the colour values directly. Click on icon:unfold_more[set=material, role=darkGrey] to toggle between the different options:
 ** Enter the colour’s RGB values.
 ** Enter the colour’s HSL values.
 ** Enter the colour’s hexadecimal value.
@@ -60,7 +60,7 @@ Click on icon:square[set=material, role="darkGrey"] and choose the colour.
 [red]#(Mandatory field)#
 | What do you want to use the tag for?
 In other words, what types of data records will you link to the tag?
-Select all of the appropriate availabilities (icon:check-square[role="blue"]).
+Select all of the appropriate availabilities (icon:check_box[set=material, role=skyBlue]).
 
 [cols="1,4"]
 !===
@@ -162,7 +162,7 @@ This is done, e.g. by specifying the tag ID.
 |[#intable-client]*Client* +
 (functional for plentyShop LTS 5.0 and higher)
 | In which plentyShops should the tag be visible to customers?
-Select all of the appropriate webshops (icon:check-square[role="blue"]).
+Select all of the appropriate webshops (icon:check_box[set=material, role=skyBlue]).
 
 *_Note_*: This option only appears if you selected the availability <<#intable-availability, Variation>>.
 
@@ -174,7 +174,7 @@ etc.
 Variation tags can be made visible to customers in the online store.
 If your online store is available in multiple languages, then the tag names should also appear in these languages.
 
-. Click on icon:plus[role="darkGrey"] and select a language version from the drop-down list.
+. Click on icon:add[set=material, role=darkGrey] and select a language version from the drop-down list.
 . Enter a translation of the name.
 
 |===
