--- a/docs/en-gb/modules/_includes/pages/tags-search.adoc
+++ b/docs/en-gb/modules/_includes/pages/tags-search.adoc
@@ -2,10 +2,10 @@
 Use the search function to find your tags and edit them further.
 
 . Go to *Setup » Settings » Tags*.
-.. *_Option 1_*: Click on icon:search[role="darkGrey"] to see a list of all tags.
+.. *_Option 1_*: Click on icon:search[set=material, role=darkGrey] to see a list of all tags.
 .. *_Option 2_*: Enter a number or text into the search field and click on one of the automatic suggestions.
-Then click on icon:search[role="darkGrey"] to start the search.
-.. *_Option 3_*: Click on icon:tune[set=material, role="darkGrey"] to narrow down the search results with filters.
+Then click on icon:search[set=material, role=darkGrey] to start the search.
+.. *_Option 3_*: Click on icon:tune[set=material, role=darkGrey] to narrow down the search results with filters.
 See the table below.
 
 //image::artikel:standard-suche.gif[]
@@ -60,11 +60,11 @@ You can save these search settings to apply them again more quickly and easily i
 Saving the current filters:
 
 . Start a search.
-. Click on *Saved filters* (icon:bookmarks[set=material, role="darkGrey"]).
-. Click on icon:bookmark_border[set=material, role="darkGrey"] *Save current filter*.
-. Enter a name and toggle the optional settings as needed (icon:toggle_on[set=material, role="blue"]).
+. Click on *Saved filters* (icon:bookmarks[set=material, role=darkGrey]).
+. Click on icon:bookmark_border[set=material, role=darkGrey] *Save current filter*.
+. Enter a name and toggle the optional settings as needed (icon:toggle_on[set=material, role=skyBlue]).
 . Click on *Save*. +
-→ The filter settings now appear under *Saved filters* (icon:bookmarks[set=material, role="darkGrey"]).
+→ The filter settings now appear under *Saved filters* (icon:bookmarks[set=material, role=darkGrey]).
 
 //image::artikel:vorlage-speichern.gif[]
 
@@ -74,22 +74,22 @@ Saving the current filters:
 
 | *Set as default*
 |
-icon:toggle_on[set=material, role="blue"] = When you open the menu *Setup » Settings » Tags*, the filter settings will already be selected and the search will automatically start with these settings.
+icon:toggle_on[set=material, role=skyBlue] = When you open the menu *Setup » Settings » Tags*, the filter settings will already be selected and the search will automatically start with these settings.
 
-icon:toggle_off[set=material, role="darkGrey"] = The filter settings will not already be selected.
+icon:toggle_off[set=material, role=darkGrey] = The filter settings will not already be selected.
 
 | *Create filter for all users*
 |
-icon:toggle_on[set=material, role="blue"] = The filter preset will be visible for all user accounts.
+icon:toggle_on[set=material, role=skyBlue] = The filter preset will be visible for all user accounts.
 
-icon:toggle_off[set=material, role="darkGrey"] = The filter preset will only be visible for your own user account.
+icon:toggle_off[set=material, role=darkGrey] = The filter preset will only be visible for your own user account.
 
 |===
 
 [.instruction]
 Applying saved filters:
 
-. Click on *Saved filters* (icon:bookmarks[set=material, role="darkGrey"]).
+. Click on *Saved filters* (icon:bookmarks[set=material, role=darkGrey]).
 . Click on an existing filter preset. +
 → The search is started and the search settings are displayed up top as so-called “chips”.
 
@@ -100,7 +100,7 @@ Applying saved filters:
 When you start the search, you’ll see the results in an overview.
 
 * *_Option 1_*: Click on a tag to open it and edit its settings further.
-* *_Option 2_*: Select multiple tags (icon:check-square[role="blue"]) and click on the pencil icon (icon:pencil[role="darkGrey"]).
+* *_Option 2_*: Select multiple tags (icon:check_box[set=material, role=skyBlue]) and click on the pencil icon (icon:edit[set=material, role=darkGrey]).
 This opens all of the selected tags at once and you can edit their settings further.
 
 //image::artikel:vorlage-speichern.gif[]
